--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -92,3 +92,25 @@ main {
     background-color: #1e9f51 !important;
     color: rgb(255, 255, 255) !important;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* //////////////////////////////// ==================================== */
+
+  .tag{
+    padding: 10px ;
+    width: 200px;
+    text-align: center;
+    border-radius: 50px;
+    margin: 1rem;
+  }
